Fix old test cases for find